getting partials to work

--- a/Ironsworn_v2/precompiled/html/css/Ironsworn.css
+++ b/Ironsworn_v2/precompiled/html/css/Ironsworn.css
@@ -3,6 +3,11 @@
   margin: 0 auto !important;
   padding: 15px;
 }
+
+.nom {
+  background: black;
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
