--- a/Ironsworn_v2/precompiled/src/index.pug
+++ b/Ironsworn_v2/precompiled/src/index.pug
@@ -1,14 +1,14 @@
 
 //- Modes
-div ${require('./pages/ironsworn/index.html')}
-div ${require('./pages/delve/index.html')}
+div <%= require('html-loader!./pages/ironsworn/index.html') %>
+div <%= require('html-loader!./pages/delve/index.html') %>
 
 //- Roll Templates
-rolltemplate.sheet-rolltemplate-ironsworn_oracles ${require('./roll-templates/ironsworn-oracles.html')}
-rolltemplate.sheet-rolltemplate-ironsworn_moves ${require('./roll-templates/ironsworn-moves.html')}
-rolltemplate.sheet-rolltemplate-ironsworn_delve_rarity ${require('./roll-templates/delve-rarity.html')}
-rolltemplate.sheet-rolltemplate-ironsworn_delve_oracles ${require('./roll-templates/delve-oracles.html')}
-rolltemplate.sheet-rolltemplate-ironsworn_delve_moves ${require('./roll-templates/delve-moves.html')}
+//- rolltemplate.sheet-rolltemplate-ironsworn_oracles <%= require('html-loader!./roll-templates/ironsworn-oracles.html') %>
+//- rolltemplate.sheet-rolltemplate-ironsworn_moves <%= require('html-loader!./roll-templates/ironsworn-moves.html') %>
+//- rolltemplate.sheet-rolltemplate-ironsworn_delve_rarity <%= require('html-loader!./roll-templates/delve-rarity.html') %>
+//- rolltemplate.sheet-rolltemplate-ironsworn_delve_oracles <%= require('html-loader!./roll-templates/delve-oracles.html') %>
+//- rolltemplate.sheet-rolltemplate-ironsworn_delve_moves <%= require('html-loader!./roll-templates/delve-moves.html') %>
 
 //- Sheet Workers
-script(type="text/worker") ${require('./workers/ironsworn.js')}
+//- script(type="text/worker") <%= require('html-loader!./workers/ironsworn.html') %>
