move and fix npc sheet

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -11,7 +11,6 @@ button {
   text-shadow: none; }
   button[type='roll'], button[type='action'] {
     font-size: 1em;
-    margin: 0px !important;
     padding: 1px 2px;
     border-bottom: 0.01em solid #666;
     border-bottom-right-radius: 0.01em;
@@ -557,10 +556,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       border-top-left-radius: 0px; }
   .sheet-pc div.sheet-repeating-container div.repitem {
     display: inline-grid;
-    padding: 1% 0.5%;
-    margin-bottom: 0px; }
+    padding: 1% 0.5%; }
     .sheet-pc div.sheet-repeating-container div.repitem button[type='roll'] {
-      text-align: left; }
+      text-align: left;
+      margin: 0px; }
     .sheet-pc div.sheet-repeating-container div.repitem input:nth-of-type(1n+2) {
       text-align: center; }
     .sheet-pc div.sheet-repeating-container div.repitem input[type='text'], .sheet-pc div.sheet-repeating-container div.repitem input[type='number'] {
@@ -593,8 +592,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-static div.sheet-border-box .sheet-pc-box {
       border-top-right-radius: 0px;
       border-top-left-radius: 10px; }
-    .sheet-pc div.sheet-static div.sheet-attr-box button:hover, .sheet-pc div.sheet-static div.sheet-attr-box button:focus, .sheet-pc div.sheet-static div.sheet-attr-box button:active {
-      transform: scale(1.1); }
+    .sheet-pc div.sheet-static div.sheet-attr-box button {
+      margin-bottom: 2%; }
+      .sheet-pc div.sheet-static div.sheet-attr-box button:hover, .sheet-pc div.sheet-static div.sheet-attr-box button:focus, .sheet-pc div.sheet-static div.sheet-attr-box button:active {
+        transform: scale(1.1); }
   .sheet-pc div.sheet-core {
     /***** QUALITIES *****/ }
     .sheet-pc div.sheet-core div.sheet-armor-buttons {
@@ -1266,6 +1267,8 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-settings {
         grid-column: 1 / 7;
         grid-template-columns: 30% 1fr 1fr 4em 1em 1em; }
+  .sheet-pc div.sheet-social input:not(:placeholder-shown) {
+    background-color: transparent; }
   .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem {
     grid-template-columns: 1fr 1.5em 1em 1em; }
     .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem label[data-i18n-title='notes'],
