--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -248,12 +248,12 @@ select {
 			div.repitem {
 				display: inline-grid;
 				padding: 1% 0.5%;
-				margin-bottom: 0px;
 				@extend %gridGap;
 				@extend %borderBottom;
 
 				button[type='roll'] { 
-					text-align: left; 
+					text-align: left;
+          margin: 0px;
 				}
 
 				input { 
