--- a/Shadowrun5thEdition/src/scss/pages/tabs/_social.scss
+++ b/Shadowrun5thEdition/src/scss/pages/tabs/_social.scss
@@ -1,6 +1,10 @@
 /*** SOCIAL ****/
 div.sheet-social {
 
+  input:not(:placeholder-shown) {
+    background-color: transparent;;
+  }
+
   div.sheet-lifestyle {
     $lifestyleGrid: 1fr 1.5em 1em 1em;
     div.repitem {
