--- a/Shadowrun5thEdition/src/scss/pages/tabs/_static.scss
+++ b/Shadowrun5thEdition/src/scss/pages/tabs/_static.scss
@@ -11,6 +11,7 @@ div.sheet-static {
 
   div.sheet-attr-box {
     button {
+      margin-bottom: 2%;
       &:hover, &:focus, &:active {
         transform: scale(1.1);
       }
