--- a/Shadowrun5thEdition/src/pug/tabs/social.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/social.pug
@@ -7,13 +7,13 @@
       .pc-box.small-box
         .row-long
           h3(data-i18n="primarylifestyle")
-          input(name="attr_primary_lifestyle" placeholder="Middle /w GRID subscription" style="width: 77%" title="@{primary_lifestyle}" type="text")
+          input.text-left(name="attr_primary_lifestyle" placeholder="Middle /w GRID subscription" style="width: 77%" title="@{primary_lifestyle}" type="text")
         .row-long
           h3(data-i18n="nuyen")
-          input(type="text" name="attr_primary_nuyen" placeholder="$1,000 UCAS" style="width: 90%" title="@{primary_nuyen}")
+          input.text-left(type="text" name="attr_primary_nuyen" placeholder="$1,000 UCAS" style="width: 90%" title="@{primary_nuyen}")
         .row-long
           h3(data-i18n="licenses")
-          input(type="text" name="attr_primary_licenses" placeholder="Technomancer, Pistols..." style="width: 87%" title="@{primary_licenses}")
+          input.text-left(type="text" name="attr_primary_licenses" placeholder="Technomancer, Pistols..." style="width: 87%" title="@{primary_licenses}")
         .row-long.headers
           h2(data-i18n="fakeidsrelated")
         .rows.repeating-container
