[Ryuutama]: fixing old syntax error I never noticed

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -755,8 +755,8 @@ div.sheet-settings {
 .sheet-npc-switch-label {
     float: right;
     overflow: auto;
-    margin 0px;
-    padding 0px
+    margin: 0;
+    padding: 0;
 }
 
 .sheet-block-a,
