Layout is now all CSS Grid
simplified CSS and changed layout to all Grid. Flexbox still used for inline labels and input.

--- a/DnD_Original_DnD/DnD_ODnD.css
+++ b/DnD_Original_DnD/DnD_ODnD.css
@@ -1,35 +1,12 @@
 /* Original Dungeons & Dragons Character Sheet CSS */
-/* Version 1.0 */
+/* Version 1.1 */
 
 
 /****************
 ***   FONTS   ***
 ****************/
 
-/* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&family=Sue+Ellen+Francisco&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco|Special+Elite&display=swap'); */
 @import url('https://fonts.googleapis.com/css?family=Special+Elite|Sue+Ellen+Francisco&display=swap');
-
-
-/* @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=Sue+Ellen+Francisco&display=swap'); */
-
-/* @font-face {
-  font-family: 'Special Elite';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Special Elite Regular'), local('SpecialElite-Regular'), url(https://fonts.gstatic.com/s/specialelite/v10/XLYgIZbkc4JPUL5CVArUVL0ntnAOSFNuQsI.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-@font-face {
-  font-family: 'Sue Ellen Francisco';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local('Sue Ellen Francisco '), local('SueEllenFrancisco'), url(https://fonts.gstatic.com/s/sueellenfrancisco/v10/wXK3E20CsoJ9j1DDkjHcQ5ZL8xRaxru9no1P23in5H8.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-} */
 
 /* end Fonts */
 
@@ -38,8 +15,13 @@
 **  Wrapper  **
 **************/
 
+.charsheet {
+	padding: 0;
+}
+
 .sheet-odd {
-	width: 800px;
+	max-width: 800px;
+	min-width: 700px;
 	margin: 0;
 	padding: 10px 20px 20px;
 	background: #FAFCFC;
@@ -50,108 +32,94 @@
 **  Typography  **
 *****************/
 
-h2, label, .sheet-label, .sheet-note, .sheet-text, .sheet-note {
+h2, span, label, .sheet-label, .sheet-text {
 	margin: 0px;
 	font-family: 'Special Elite';
 	font-size: 16px;
 	line-height: 32px;
+	font-weight: bold;
 	color: #7A9EAA;
 }
 
-h2, .sheet-label, .sheet-note {
+h2, .sheet-label, .sheet-center {
 	text-align: center;
 }
 
-.sheet-label {
+.sheet-label, .sheet-underline {
 	text-decoration: underline;
 }
-
-.sheet-note {
-	font-family: 'Sue Ellen Francisco';
-	font-size: 12px;
-}
-
 
 /******************
 ***   LAYAOUT   ***
 ******************/
 
 /* FLEXBOX */
-.sheet-section {
-}
 
 .sheet-flex-row {
 	display: flex;
-	justify-content: space-between;
+	align-items: baseline;
 }
 
-.sheet-flex-col {
-	display: flex;
-	align-items: flex-end;
-	justify-content: space-between;
- }
-
-.sheet-flex-full {
-	width: 800px;
-}
-
-.sheet-flex-half {
-	width: 392px;
-}
-
-.sheet-flex-quarter {
-	width: 188px;
-}
-
-.sheet-flex-six-sixteenth {
-	width: 290px;
-}
-
-.sheet-flex-sixteenth {
-	width: 35px;
-}
-
-.sheet-flex-col.sheet-label, .sheet-flex-col.sheet-note {
+.sheet-label {
 	justify-content: center;
 }
 
-.sheet-section.sheet-lanuages-saves-misc {
-	border-top: 2px dashed #7A9EAA;
-	border-bottom: 2px dashed #7A9EAA;
-	padding: 0 0 16px 0;
+.sheet-flex-row.sheet-misc {
+	align-items: flex-start;
 }
 
-.sheet-flex-col.sheet-misc {
-	margin: 16px 0 0 0;
-	align-items: flex-start;
+/* GRID for Top section */
+
+.sheet-grid-top {
+	display: grid;
+	grid-template-columns: repeat(16, 1fr);
+	grid-template-rows: auto;
+	grid-gap: 16px;
+	padding-bottom: 8px;
+}
+.sheet-grid-top-span1 {
+	grid-column: span 1;
+}
+.sheet-grid-top-span4 {
+	grid-column: span 4;
+}
+.sheet-grid-top-span6 {
+	grid-column: span 6;
+}
+.sheet-grid-top-span8 {
+	grid-column: span 8;
+}
+.sheet-grid-top-span16 {
+	grid-column: span 16;
 }
 
 /* GRID for Bottom section */
 
-.sheet-grid {
+.sheet-grid-bottom {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: 200px auto 51px;
+	grid-gap: 8px;
+	padding-bottom: 8px;
 }
 
-.sheet-grid-item {
-	padding: 0 8px 8px 8px;
+.sheet-grid-bottom-item {
+	padding: 0 8px 8px 0;
 }
 
-.sheet-grid-item1 {
-	grid-row: 1 / 4;
+.sheet-grid-bottom-item1 {
+	grid-row: span 3;
 	border-right: 2px dashed #7A9EAA;
 }
-
-.sheet-grid-item2 {
+.sheet-grid-bottom-item2 {
 	border-right: 2px dashed #7A9EAA;
 }
-.sheet-grid-item5 {
-	grid-row: 2 / 4;
+.sheet-grid-bottom-item5 {
+	grid-row: span 2;
 	border-top: 2px dashed #7A9EAA;
 	border-right: 2px dashed #7A9EAA;
 }
-.sheet-grid-item6, .sheet-grid-item9 {
+.sheet-grid-bottom-item6, .sheet-grid-bottom-item9 {
 	border-top: 2px dashed #7A9EAA;
 }
 
@@ -166,7 +134,6 @@ h2, .sheet-label, .sheet-note {
 	margin: 0;
 	padding: 0 8px 0 0;
 	width: auto;
-	font-weight: normal;
 }
 
 .sheet-odd input {
@@ -211,10 +178,6 @@ input.sheet-attr {
 	text-align: center;
 }
 
-.sheet-saves input {
-	width: 50px;
-}
-
 textarea.sheet-textarea-fill {
 	box-sizing:border-box;
 	width: 100%;
@@ -222,3 +185,19 @@ textarea.sheet-textarea-fill {
 }
 
 /* END Form Elements */
+
+/* Misc. */
+
+.sheet-lanuages-saves-misc {
+	border-top: 2px dashed #7A9EAA;
+	border-bottom: 2px dashed #7A9EAA;
+	padding: 16px 0;
+}
+
+.sheet-saves {
+	padding: 16px 0;
+}
+
+.sheet-coin label {
+	width: 55%;
+}
