use game-line instead of both sheet-types

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -47,81 +47,63 @@
     display: none !important;
 }
 
-input.sheet-type[value="mortal1"] ~ * .sheet-mortal,
+input.sheet-game-line[value="mortal"] ~ * .sheet-mortal,
 input.sheet-type[value="mortal1"] ~ * .sheet-mortal1,
-input.sheet-type[value="mortal2"] ~ * .sheet-mortal,
 input.sheet-type[value="mortal2"] ~ * .sheet-mortal2,
-input.sheet-type[value="vampire2"] ~ * .sheet-vampire2,
-input.sheet-type[value="vampire1"] ~ * .sheet-vampire,
+input.sheet-game-line[value="vampire"] ~ * .sheet-vampire,
 input.sheet-type[value="vampire1"] ~ * .sheet-vampire1,
-input.sheet-type[value="vampire2"] ~ * .sheet-vampire,
 input.sheet-type[value="vampire2"] ~ * .sheet-vampire2,
-input.sheet-type[value="werewolf1"] ~ * .sheet-werewolf,
+input.sheet-game-line[value="werewolf"] ~ * .sheet-werewolf,
 input.sheet-type[value="werewolf1"] ~ * .sheet-werewolf1,
-input.sheet-type[value="werewolf2"] ~ * .sheet-werewolf,
 input.sheet-type[value="werewolf2"] ~ * .sheet-werewolf2,
-input.sheet-type[value="mage1"] ~ * .sheet-mage,
+input.sheet-game-line[value="mage"] ~ * .sheet-mage,
 input.sheet-type[value="mage1"] ~ * .sheet-mage1,
-input.sheet-type[value="mage2"] ~ * .sheet-mage,
 input.sheet-type[value="mage2"] ~ * .sheet-mage2,
-input.sheet-type[value="promethean1"] ~ * .sheet-promethean,
+input.sheet-game-line[value="promethean"] ~ * .sheet-promethean,
 input.sheet-type[value="promethean1"] ~ * .sheet-promethean1,
-input.sheet-type[value="promethean2"] ~ * .sheet-promethean,
 input.sheet-type[value="promethean2"] ~ * .sheet-promethean2,
-input.sheet-type[value="changeling1"] ~ * .sheet-changeling,
+input.sheet-game-line[value="changeling"] ~ * .sheet-changeling,
 input.sheet-type[value="changeling1"] ~ * .sheet-changeling1,
-input.sheet-type[value="changeling2"] ~ * .sheet-changeling,
 input.sheet-type[value="changeling2"] ~ * .sheet-changeling2,
-input.sheet-type[value="geist1"] ~ * .sheet-geist,
+input.sheet-game-line[value="geist"] ~ * .sheet-geist,
 input.sheet-type[value="geist1"] ~ * .sheet-geist1,
-input.sheet-type[value="geist2"] ~ * .sheet-geist,
 input.sheet-type[value="geist2"] ~ * .sheet-geist2,
-input.sheet-type[value="mummy1"] ~ * .sheet-mummy,
+input.sheet-game-line[value="mummy"] ~ * .sheet-mummy,
 input.sheet-type[value="mummy1"] ~ * .sheet-mummy1,
-input.sheet-type[value="mummy2"] ~ * .sheet-mummy,
 input.sheet-type[value="mummy2"] ~ * .sheet-mummy2,
-input.sheet-type[value="demon"] ~ * .sheet-demon,
-input.sheet-type[value="beast"] ~ * .sheet-beast,
-input.sheet-type[value="hunter"] ~ * .sheet-hunter {
+input.sheet-game-line[value="demon"] ~ * .sheet-demon,
+input.sheet-game-line[value="beast"] ~ * .sheet-beast,
+input.sheet-game-line[value="hunter"] ~ * .sheet-hunter {
     display: inline-block !important;
 }
 
-input.sheet-type[value="mortal1"] ~ * table.sheet-mortal,
+input.sheet-game-line[value="mortal"] ~ * table.sheet-mortal,
 input.sheet-type[value="mortal1"] ~ * table.sheet-mortal1,
-input.sheet-type[value="mortal2"] ~ * table.sheet-mortal,
 input.sheet-type[value="mortal2"] ~ * table.sheet-mortal2,
-input.sheet-type[value="vampire2"] ~ * table.sheet-vampire2,
-input.sheet-type[value="vampire1"] ~ * table.sheet-vampire,
+input.sheet-game-line[value="vampire"] ~ * table.sheet-vampire,
 input.sheet-type[value="vampire1"] ~ * table.sheet-vampire1,
-input.sheet-type[value="vampire2"] ~ * table.sheet-vampire,
 input.sheet-type[value="vampire2"] ~ * table.sheet-vampire2,
-input.sheet-type[value="werewolf1"] ~ * table.sheet-werewolf,
+input.sheet-game-line[value="werewolf"] ~ * table.sheet-werewolf,
 input.sheet-type[value="werewolf1"] ~ * table.sheet-werewolf1,
-input.sheet-type[value="werewolf2"] ~ * table.sheet-werewolf,
 input.sheet-type[value="werewolf2"] ~ * table.sheet-werewolf2,
-input.sheet-type[value="mage1"] ~ * table.sheet-mage,
+input.sheet-game-line[value="mage"] ~ * table.sheet-mage,
 input.sheet-type[value="mage1"] ~ * table.sheet-mage1,
-input.sheet-type[value="mage2"] ~ * table.sheet-mage,
 input.sheet-type[value="mage2"] ~ * table.sheet-mage2,
-input.sheet-type[value="promethean1"] ~ * table.sheet-promethean,
+input.sheet-game-line[value="promethean"] ~ * table.sheet-promethean,
 input.sheet-type[value="promethean1"] ~ * table.sheet-promethean1,
-input.sheet-type[value="promethean2"] ~ * table.sheet-promethean,
 input.sheet-type[value="promethean2"] ~ * table.sheet-promethean2,
-input.sheet-type[value="changeling1"] ~ * table.sheet-changeling,
+input.sheet-game-line[value="changeling"] ~ * table.sheet-changeling,
 input.sheet-type[value="changeling1"] ~ * table.sheet-changeling1,
-input.sheet-type[value="changeling2"] ~ * table.sheet-changeling,
 input.sheet-type[value="changeling2"] ~ * table.sheet-changeling2,
-input.sheet-type[value="geist1"] ~ * table.sheet-geist,
+input.sheet-game-line[value="geist"] ~ * table.sheet-geist,
 input.sheet-type[value="geist1"] ~ * table.sheet-geist1,
-input.sheet-type[value="geist2"] ~ * table.sheet-geist,
 input.sheet-type[value="geist2"] ~ * table.sheet-geist2,
-input.sheet-type[value="mummy1"] ~ * table.sheet-mummy,
+input.sheet-game-line[value="mummy"] ~ * table.sheet-mummy,
 input.sheet-type[value="mummy1"] ~ * table.sheet-mummy1,
-input.sheet-type[value="mummy2"] ~ * table.sheet-mummy,
 input.sheet-type[value="mummy2"] ~ * table.sheet-mummy2,
-input.sheet-type[value="demon"] ~ * table.sheet-demon,
-input.sheet-type[value="beast"] ~ * table.sheet-beast,
-input.sheet-type[value="hunter"] ~ * table.sheet-hunter {
+input.sheet-game-line[value="demon"] ~ * table.sheet-demon,
+input.sheet-game-line[value="beast"] ~ * table.sheet-beast,
+input.sheet-game-line[value="hunter"] ~ * table.sheet-hunter {
     display: table !important;
 }
 
