Cleanup style sheet, by removing unnecessary measurements, and adding default font families. This was done to remove IDE errors and warnings

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -110,12 +110,12 @@
 }
 .charsheet select.sheet-short {
     display: inline-block;
-    margin: 0px 0px;
+    margin: 0 0;
     width: 4em;
 }
 .charsheet select.sheet-mintext {
     display: inline-block;
-    margin: 0px 0px;
+    margin: 0 0;
     width: 74px;
 }
 input.sheet-arrow
@@ -130,7 +130,7 @@ input.sheet-arrow:checked ~ div.sheet-body
 
 .charsheet input[type="checkbox"].left {
     float: left;
-    margin: 5px 0px;
+    margin: 5px 0;
     width: 2px;
 }
 
@@ -140,7 +140,7 @@ input.sheet-tab:not(:first-child)::before
 }
 
 .charsheet textarea {
-    text-overflow: scroll;
+    overflow: auto;
 }
 
 /* Fake checkbox */
@@ -408,7 +408,7 @@ div[class^="sheet-section"] {
 input[type="radio"]
 {
     opacity: 0;
-    width: 120;
+    width: 120px;
     height: 30px;
     position: absolute;
     cursor: pointer;
@@ -451,15 +451,15 @@ label {
     display:inline;
     font-size:.8125rem;
     line-height:1em;
-    margin:0px 0px 0px 0px;
-    padding:0px 0px 0px 0px;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
 
 h2,h3,h4,h5,h6,h7,h8,h9 {
     line-height:1em;
 	margin:inherit;
 	display:inline;
-    font-family: Arial;
+    font-family: Arial, sans-serif;
 	font-size:.8125rem;
 	color: #000;
 }
@@ -469,9 +469,9 @@ h1 {
 	width: 100%;
 	background-color: #FFF;
 	color: #000;
-	padding:.2em 0em 0em 0em;
+	padding:.2em 0 0 0;
 	min-height: 1em;
-	margin:0px 0px .5em 0px;
+	margin: 0 0 .5em 0;
 	font-size:.8125rem;
 	line-height:1.4em;
 	display:block;
@@ -480,7 +480,7 @@ h1 {
 
 .sheet-small-label1 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
 	margin: .75rem .4em 1.125rem .4em;
 	height: 1.85em;
     width: 72px;
@@ -495,7 +495,7 @@ h1 {
 }
 
 .sheet-small-label1  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -506,7 +506,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label1  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label1 select {
     margin-top:-2px;
@@ -515,7 +515,7 @@ h1 {
 }
 .sheet-small-label2 {
     display: inline-block;
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
 	margin: .75rem .4em 1.125rem .4em;
 	height: 1.85em;
     width: 63px;
@@ -530,7 +530,7 @@ h1 {
 }
 
 .sheet-small-label2  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -541,7 +541,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label2  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label2 select {
     margin-top:-2px;
@@ -550,7 +550,7 @@ h1 {
 }
 .sheet-small-label3 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
 	margin: .75rem .4em 1.125rem .4em;
 	height: 1.85em;
     width: 85px;
@@ -565,7 +565,7 @@ h1 {
 }
 
 .sheet-small-label3  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -576,7 +576,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label3  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label3 select {
     margin-top:-2px;
@@ -585,7 +585,7 @@ h1 {
 }
 .sheet-small-label4 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
 	margin: .75rem .4em 1.125rem .4em;
 	height: 1.85em;
     width: 67px;
@@ -600,7 +600,7 @@ h1 {
 }
 
 .sheet-small-label4  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -611,7 +611,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label4  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label4 select {
     margin-top:-2px;
@@ -620,7 +620,7 @@ h1 {
 }
 .sheet-small-label5 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
     margin: .75rem .4em 1.125rem .4em;
 	height: 1.85em;
     width: 105px;
@@ -635,7 +635,7 @@ h1 {
 }
 
 .sheet-small-label5  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -646,7 +646,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label5  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label5 select {
     margin-top:-2px;
@@ -655,7 +655,7 @@ h1 {
 }
 .sheet-small-label6 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
     margin: .75rem .4em 1.125rem .4em;
     height: 1.85em;
     width: 75px;
@@ -670,7 +670,7 @@ h1 {
 }
 
 .sheet-small-label6  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -681,7 +681,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label6  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label6 select {
     margin-top:-2px;
@@ -690,7 +690,7 @@ h1 {
 }
 .sheet-small-label7 {
     display: inline-block;
-    padding: .5em .07em 0em .07em;
+    padding: .5em .07em 0 .07em;
     margin: .75rem .4em 1.125rem .4em;
     height: 1.85em;
     width: 125px;
@@ -705,7 +705,7 @@ h1 {
 }
 
 .sheet-small-label7  span {
-	padding: .5em .07em 0em .07em;
+	padding: .5em .07em 0 .07em;
     text-align:center;
 	font-size: .85em;
 	font-style: italic;
@@ -716,7 +716,7 @@ h1 {
 	-moz-margin-end:-2px;
 }
 .sheet-small-label7  input::-moz-focus-inner {
-	padding:0px;
+	padding: 0;
 }
 .sheet-small-label7 select {
     margin-top:-2px;
@@ -727,10 +727,9 @@ h1 {
 button {
     background-color: #7C0303;
 }
-button:hover, {
+button:hover {
     background-image: url("http://www.commentnation.com/backgrounds/images/parchment_paper_seamless_pattern.jpg");
 }
-button:active
 
 /*/ Styles for 2ESheet rolltemplates /*/
 
@@ -751,13 +750,13 @@ button:active
 .sheet-rolltemplate-2Esave th.sheet-template-title1 {
 	font-size: 12pt;
 	font-weight: bold;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
 	text-align: center;
 	color: white;
 	border: none;
 	padding: 2px;
-	margin: 0px;
-    background-color: none;
+	margin: 0;
+    background-color: transparent;
 }
 
 .sheet-rolltemplate-2Edefault th.sheet-template-title2,
@@ -767,13 +766,13 @@ button:active
 .sheet-rolltemplate-2Esave th.sheet-template-title2 {
 	font-size: 12pt;
 	font-weight: bold;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
 	text-align: center;
 	color: black;
 	border: none;
 	padding: 2px;
-	margin: 0px;
-    background-color: none;
+	margin: 0;
+    background-color: transparent;
 }
 
 .sheet-rolltemplate-2Edefault th.sheet-template-subtitle1,
@@ -784,13 +783,13 @@ button:active
 	font-size: 8pt;
 	font-weight: normal;
 	font-style: italic;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
 	text-align: center;
 	color: white;
 	border: none;
 	padding: 1px;
-	margin: 0px;
-    background-color: none;
+	margin: 0;
+    background-color: transparent;
 }
 
 .sheet-rolltemplate-2Edefault th.sheet-template-subtitle2,
@@ -801,13 +800,13 @@ button:active
 	font-size: 8pt;
 	font-style: italic;
 	font-weight: normal;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
 	text-align: center;
 	color: black;
 	border: none;
 	padding: 1px;
-	margin: 0px;
-    background-color: none;
+	margin: 0;
+    background-color: transparent;
 }
 
 .sheet-rolltemplate-2Edefault table,
@@ -852,9 +851,8 @@ button:active
 	border: 1px solid #000000;
 	border-top-right-radius: 8px;
 	border-top-left-radius: 8px;
-	padding: 3px;
-	padding-top: 5px;
-	margin-bottom: 0px;
+    padding: 5px 3px 3px;
+    margin-bottom: 0;
 }
 
 /*/ Styles for the 2Edefault Template /*/
@@ -868,32 +866,32 @@ button:active
     text-transform: capitalize;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: 1px solid black;
     border-right: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Edefault td.sheet-default-c2 {
     font-size: 10pt;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: 1px solid black;
     border-left: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Edefault td.sheet-default-c3 {
     font-size: 9pt;
     color: #000000;
     text-align: left;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: 1px solid black;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 
@@ -948,7 +946,7 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
     color: #ffffff;
 }
 
@@ -963,7 +961,7 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-	font-family: "verdana", "tahoma", "ariel";
+	font-family: "verdana", "tahoma", "ariel", sans-serif;
     color: #ffffff;
 }
 
@@ -1006,10 +1004,10 @@ button:active
     font-size: 10pt;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: 1px solid black;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
     width: 50%;
 }
 
@@ -1018,17 +1016,17 @@ button:active
     font-weight: bold;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
 }
 
 .sheet-rolltemplate-2Espell td.sheet-spell-c2 {
     font-size: 9pt;
     color: #000000;
     text-align: left;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: 1px solid black;
     padding: 3px;
-    margin: 0px;
+    margin: 0;
 }
 
 /*/ Styles for the 2Esave Template /*/
@@ -1042,10 +1040,10 @@ button:active
     text-transform: capitalize;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Esave td.sheet-save-c2 {
@@ -1053,10 +1051,10 @@ button:active
     font-weight: bold;
     text-transform: capitalize;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Esave td.sheet-save-c3 {
@@ -1065,11 +1063,11 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     text-align: center;
     color: #ffffff;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Esave td.sheet-save-c4 {
@@ -1078,11 +1076,11 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     text-align: center;
     color: #ffffff;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Echeck div.sheet-check-head {
@@ -1095,10 +1093,10 @@ button:active
     text-transform: capitalize;
     color: #000000;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Echeck td.sheet-check-c2 {
@@ -1106,10 +1104,10 @@ button:active
     font-weight: bold;
     text-transform: capitalize;
     text-align: center;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     border: none;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Echeck td.sheet-check-c3 {
@@ -1118,11 +1116,11 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     text-align: center;
     color: #ffffff;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 .sheet-rolltemplate-2Echeck td.sheet-check-c4 {
@@ -1131,11 +1129,11 @@ button:active
     font-size: 12pt;
     font-weight: bold;
     font-style: italic;
-    font-family: "verdana";
+    font-family: "verdana", sans-serif;
     text-align: center;
     color: #ffffff;
     padding: 4px;
-    margin: 0px;
+    margin: 0;
 }
 
 th.sheet-default-header {
